--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.js"></script>
     <script src="/assets/js/swiper.min.js"></script>
     <script src="/assets/js/phonemask.js"></script>
-    <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script type="text/javascript" src="/assets/js/main.js"></script>
 </head>
 <body>
