--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="/assets/js/phonemask.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script type="text/javascript" src="/assets/js/main.js"></script>
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <section class="panel" data-section-name="home">
