Оживил ссылку на вк

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="contact shadow">
                     <div class="contact_test">В тестовом использовал самые частые примеры функционала на сайте</div>
                     <div class="contact__list">
-                        <a href="https://vk.com/vottiv/" class="contact__item" target="_blank">
+                        <a href="https://vk.com/vottiv" class="contact__item" target="_blank">
                             <i class="fab fa-vk"></i>
                         </a>
                         <a href="mailto:vottiv@gmail.com" class="contact__item" target="_blank">
